--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
 layout: default
 title: Deepak Prakash
 ---
-
-  {% for post in site.posts %}
-  <div class="panel panel-default">
-    <div class="panel-body">
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
-      {% if post.excerpt != post.content %}
-          <a href="{{ post.url }}">Read more</a>
-      {% endif %}
+<div class="row">
+  <div class="col-sm-9 col-md-10">
+    {% for post in site.posts %}
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <h5>{{ post.date | date_to_string}}</h5>
+        {{ post.excerpt }}
+        {% if post.excerpt != post.content %}
+            <a class="btn btn-info" href="{{ post.url }}">Read more</a>
+        {% endif %}
+      </div>
     </div>
+    {% endfor %}
   </div>
-  {% endfor %}
+  <div class="col-sm-3 col-md-2">
+    <h3>Categories</h3>
+    {% for category in site.categories %}
+        <a href="/category/{{ category[0] }}/">{{ category[0] | capitalize }}</a><br />
+    {% endfor %}
+  </div>
