--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Deepak Prakash
     <div class="panel panel-default">
       <div class="panel-body">
         <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-        <h5>{{ post.date | date_to_string}}</h5>
+        <h5>{{ post.date | date_to_string }}</h5>
         {{ post.excerpt }}
         {% if post.excerpt != post.content %}
             <a class="btn btn-info" href="{{ post.url }}">Read more</a>
@@ -23,6 +23,6 @@ title: Deepak Prakash
   <div class="col-sm-3 col-md-2">
     <h3>Categories</h3>
     {% for category in site.categories %}
-        <a href="/category/{{ category[0] }}/">{{ category[0] | capitalize }}</a><br />
+        <a href="/categories/{{ category[0] }}/">{{ category[0] | capitalize }}</a><br />
     {% endfor %}
   </div>
