--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ title: Deepak Prakash
   <div class="col-sm-3 col-md-2">
     <h3>Categories</h3>
     {% for category in site.categories %}
-        <a href="/categories/{{ category[0] }}/">{{ category[0] | capitalize }}</a><br />
+        <a href="/categories/{{ category[0] }}.html">{{ category[0] | capitalize }}</a><br />
     {% endfor %}
   </div>
