--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ title: Deepak Prakash
   <div class="col-sm-3 col-md-2">
     <h3>Categories</h3>
     {% for category in site.categories %}
-        <a href="/categories/{{ category[0] }}.html">{{ category[0] | capitalize }}</a><br />
+      {% assign each_category = category[0] | downcase %}
+      <a href="/categories/{{ each_category }}.html">{{ category[0] | capitalize }}</a><br />
     {% endfor %}
   </div>
