--- a/index.html
+++ b/index.html
@@ -5,28 +5,25 @@
 layout: default
 title: Deepak Prakash
 ---
+
+{% for post in paginator.posts %}
 <div class="row">
-  <div class="col-sm-9 col-md-10">
-    {% for post in paginator.posts %}
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-        <h5>{{ post.date | date_to_string }}</h5>
-        {{ post.excerpt }}
+  <div class="col s12">
+    <div class="card-panel">
+      <div class="card-content">
+        <h4><a class="card-title" href="{{ post.url }}">{{ post.title }}</a></h4>
+        <h6>{{ post.date | date_to_string }}</h6>
+        <p>{{ post.excerpt }}</p>
+      </div>
+      <div class="card-action">
         {% if post.excerpt != post.content %}
-            <a class="btn btn-info" href="{{ post.url }}">Read more</a>
+          <a class="btn btn-info waves-effect waves-light light-blue darken-4" href="{{ post.url }}">
+            Read more
+          </a>
         {% endif %}
       </div>
     </div>
-    {% endfor %}
-  </div>
-  <div class="col-sm-3 col-md-2">
-    <h3>Categories</h3>
-    {% for category in site.categories %}
-      {% assign category_name = category[0] | downcase %}
-      <a href="/categories/{{ category_name }}.html">{{ category[0] | capitalize }}</a><br />
-    {% endfor %}
   </div>
 </div>
-
+{% endfor %}
 {% include pagination.html %}
